# TestDemo2022

./: README.txt
TestDemo2022_JniGpio/: CMakeLists.txt
TestDemo2022_JniGpio/src/: function_gpio_GPIO_Core_Jni.cpp  function_gpio_GPIO_Core_Jni.h
TestDemo2022_WebClient/: CMakeLists.txt
TestDemo2022_WebClient/src/: _main.cpp
TestDemo2022_WebClient/src/common/: HttpAccesser.cpp  HttpAccesser.h  Label.cpp  Label.h  WebSocketClient.cpp  WebSocketClient.h
TestDemo2022_WebClient/src/custom/: Led.cpp  Led.h
TestDemo2022_WebClient/src/window/: Form.cpp  Form.h  Form.ui
TestDemo2022_WebServer/: pom.xml
TestDemo2022_WebServer/src/ctrl/main/: Main.java
TestDemo2022_WebServer/src/ctrl/restful/: Led.java
TestDemo2022_WebServer/src/ctrl/websocket/: Led.java
TestDemo2022_WebServer/src/function/gpio/: GPIO_Core.java  GPIO_Define.java  GPIO_Func_Led.java
TestDemo2022_WebServer/src/main/java/_main/: MainDo.java
TestDemo2022_WebServer/src/main/webapp/WEB-INF/: web.xml
